# command-argus

./: CLAUDE.md
command-argus-gui/: package-lock.json  package.json  vite.config.ts
command-argus-gui/src/: App.tsx  types.ts
command-argus-gui/src-tauri/: Cargo.toml  tauri.conf.json
command-argus-gui/src-tauri/capabilities/: default.json
command-argus-gui/src-tauri/src/: lib.rs  main.rs
command-argus-gui/src/components/: CommandForm.tsx  CommandList.tsx  ParameterInputModal.tsx
command-argus-logic/: .gitignore  Cargo.toml
command-argus-logic/src/: command.rs  error.rs  executor.rs  lib.rs  storage.rs
