[package]
name = "command-argus-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "check_path"
path = "src/bin/check_path.rs"
